  primesieve::iterator's API remains backwards compatible.
* Fix undefined behavior (g++-12 issue) caused by resizeUninitialized.hpp,
  use new pod_vector<uint64_t> from pod_vector.hpp instead.
* iterator.cpp: Enable pre-sieving for primesieve::iterator.prev_prime().
* iterator-c.cpp: Enable pre-sieving for primesieve::iterator.prev_prime().
* PrimeGenerator.cpp: Improve AVX512 of fillNextPrimes().
* PrimeGenerator.cpp: Reduce memory usage for tiny stop numbers.
* PrimeGenerator.hpp: Add GCC/Clang's function multiversioning for AVX512.
* Erat.cpp: Reduce memory usage, allocate the minimum required
  memory to store all sieving primes.
* CpuInfo.cpp: Detect AVX512 using CPUID.

Changes in version 7.9, 03/05/2022
==================================

* intrinsics.hpp: Improved x64 BSF assembly.
* iterator.cpp: Reduce memory allocations in generate_prev_primes().
* iterator-c.cpp: Reduce memory allocations.
* CpuInfo.cpp: Improve hybrid CPU detection on Linux.
* Erat.cpp: Reduce memory usage when sieving a single segment.
* EratBig.cpp: Improve instruction level parallelism.
* EratBig.cpp: Improve next wheel index code.
* EratBig.cpp: Use std::copy() instead of std::rotate().
* SievingPrimes.cpp: Reduce branch mispredictions.
* PreSieve.cpp: Hardcode buffersDist.
* MemoryPool.cpp: Reduce memory usage.
* StorePrimes.hpp: Improve nth prime approximation.
* config.hpp: Tune FACTOR_ERATMEDIUM constant.
* Use a single MemoryPool per thread (previously 2).
* Increase max sieve array size to 8 KiB.

Changes in version 7.8, 21/01/2022
==================================

primesieve can now pre-sieve the multiples of small primes < 100
(previously <= 19) using about only half as much memory. Instead
of using a single large pre-sieved buffer primesieve now uses
8 smaller pre-sieved buffers which are bitwise AND together before
being copied into the sieve array. The new pre-sieveing algorithm
provides a speedup of up to 10% when generating the primes < 10^11.